# ray-caster

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Assets/: scene1.json  scene1_diffuse.json  scene1_exponent_variations.json  scene2.json  scene2_ambient.json  scene2_plane_sphere.json  scene3_colored_lights.json  scene3_perspective.json  scene4_plane.json  scene4_reflective_sphere.json  scene5_sphere_triangle.json  scene5_transparent_sphere.json  scene6_squashed_sphere.json  scene6_transparent_sphere2.json  scene7_squashed_rotated_sphere.json
Source/: CMakeLists.txt  Main.cpp
Source/Core/: CMakeLists.txt  Color.hpp  Hit.cpp  Hit.hpp  Ray.cpp  Ray.hpp
Source/Geometry/: CMakeLists.txt  Object.cpp  Object.hpp  ObjectGroup.cpp  ObjectGroup.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Transformation.cpp  Transformation.hpp  Triangle.cpp  Triangle.hpp
Source/Render/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
Source/Render/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  OrthoCamera.cpp  OrthoCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
Source/Render/Light/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp
Source/Render/Material/: CMakeLists.txt  Material.cpp  Material.hpp  PhongMaterial.cpp  PhongMaterial.hpp
Source/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
